Downgrade java to version 8 for web server